# color_difference

./: Cargo.toml  README.md
.github/workflows/: audit-check.yml  audit.yml  release.yml  rust.yml
src/: color.rs  error.rs  main.rs
