[package]
name = "color_difference"
version = "0.1.0"
edition = "2021"
description = "Command line tool to calculate color differences on local images using the CIEDE2000 algorithm"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.5"
deltae = "0.3.0"
lab = "0.11.0"
