[package]
name = "color_difference"
version = "0.1.3"
authors = ["ap-1 <pallatianish@gmail.com>"]
edition = "2021"
description = "Command line tool to calculate color differences on local images using the CIEDE2000 algorithm"
readme = "README.md"
homepage = "https://github.com/ap-1/color_difference"
repository = "https://github.com/ap-1/color_difference"
license = "MIT OR Apache-2.0"
keywords = ["color", "colorimetry", "image", "cie", "rgb"]
categories = ["command-line-interface", "multimedia::images", "parser-implementations", "science", "value-formatting"]

[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
lab = "0.11.0"
deltae = "0.3.0"
image = "0.23.14"
